Webコンテンツ作成の課題　第一回分

--- a/practice-html/index.html
+++ b/practice-html/index.html
@@ -5,6 +5,30 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>「Webコンテンツ作成の成果」</h1>
+      <h2>本テーマの学習目的</h2>
+
+      <h2>プロジェクト課題について</h2>
+
+      <h2>数当てゲーム</h2>
+
+      <h2>毎回の実験で作成したページ</h2>
+        <h3>第1回 WWW と HTML</h3>
+        <p>今回は次の「WWWとHTML」について学びました。また次の課題に取り組みました。サイトの基盤であるHTML要素や要素に付加情報を付けるために属性を追加した。またHTML内では普段の文章とは
+          異なり改行や空白は要素で表し、要素で使われる記号は全く違く特殊な文を使用する。<br>演習の成果
+        </p>
+        <ul>
+          <li><a href="practice-html/stucture.html"target="_blank">演習1-3:HTML文書の作成</a></li>
+          <li><a href="practice-html/elements.html"target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
+        </ul>
+
+        
+        <h3>第2回 CCS による Web ページの装飾</h3>
+
+        <h3>第3回 JavaScript の基本</h3>
+
+        <h3>第4回 DOM と JavaScript </h3>
+
+        <h3>第5回 イベント処理</h3>
   </body>
 </html>
