--- a/practice-css/browser-intro.html
+++ b/practice-css/browser-intro.html
@@ -24,10 +24,10 @@
 </ul>
 
 <div id="zentai">
-	<div class="box">Google Chrome<p>Google Chrome（グーグル・クローム）は、Googleが開発したクロスプラットフォームのウェブブラウザである。2008年にMicrosoft Windows用に最初にリリースされ、その後Linux、macOS、iOS、Androidに移植された。</p></div>
-	<div class="box">Safari<p>Safari（サファリ）は、Appleにより開発されているウェブブラウザ。レンダリングエンジンのWebKitを初めとするオープンソースソフトウェアをベースにしており、Mac標準搭載のウェブブラウザとして過去のInternet Explorer for MacやNetscape Navigatorを置き換える形で登場した。</p></div>
-	<div class="box">Microsoft Edge<p>Microsoft Edge（マイクロソフト エッジ）は、マイクロソフトにより開発されているウェブブラウザである。マルチプラットフォームのソフトウェアとしてiOS、macOS、Android、Linux版も配布されている。</p></div>
-	<div class="box"><img src="firefox_icon.png">Mozilla Firefox<p>Mozilla Firefox（モジラ・ファイアーフォックス）は、Mozilla Foundationおよびその傘下のMozilla Corporationによって開発されているフリーかつオープンソースのウェブブラウザである。</p></div>
+	<div class="box">Google Chrome<p class="target">Google Chrome（グーグル・クローム）は、Googleが開発したクロスプラットフォームのウェブブラウザである。2008年にMicrosoft Windows用に最初にリリースされ、その後Linux、macOS、iOS、Androidに移植された。</p></div>
+	<div class="box">Safari<p class="target">Safari（サファリ）は、Appleにより開発されているウェブブラウザ。レンダリングエンジンのWebKitを初めとするオープンソースソフトウェアをベースにしており、Mac標準搭載のウェブブラウザとして過去のInternet Explorer for MacやNetscape Navigatorを置き換える形で登場した。</p></div>
+	<div class="box">Microsoft Edge<p class="target">Microsoft Edge（マイクロソフト エッジ）は、マイクロソフトにより開発されているウェブブラウザである。マルチプラットフォームのソフトウェアとしてiOS、macOS、Android、Linux版も配布されている。</p></div>
+	<div class="box"><img src="firefox_icon.png">Mozilla Firefox<p class="target">Mozilla Firefox（モジラ・ファイアーフォックス）は、Mozilla Foundationおよびその傘下のMozilla Corporationによって開発されているフリーかつオープンソースのウェブブラウザである。</p></div>
 </div>
 
 </body>
