--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>「Webコンテンツ作成の成果」</h1>
@@ -24,6 +25,7 @@
 
         
         <h3>第2回 CCS による Web ページの装飾</h3>
+        <p>今回は次の「CSSによるWebページの装飾」について学びました。また次の課題に取り組みました。サイトの見栄えを決めるCSSは文字の色や背景色を好きな色に変更できるほか、書体や文字の大きさまで自由にサイトを編集することができる。またボックスを挿入してグループ分けすることもできる。<br>演習の成果</p>
 
         <h3>第3回 JavaScript の基本</h3>
 
