--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         
         <h3>第2回 CCS による Web ページの装飾</h3>
         <p>今回は次の「CSSによるWebページの装飾」について学びました。また次の課題に取り組みました。サイトの見栄えを決めるCSSは文字の色や背景色を好きな色に変更できるほか、書体や文字の大きさまで自由にサイトを編集することができる。またボックスを挿入してグループ分けすることもできる。<br>演習の成果</p>
+        <ul>
+          <li><a href="practice-html/browser-intro.html"target="_blank">演習2-3:ウェブブラウザ説明ページの装飾</a></li>
+        </ul>
 
         <h3>第3回 JavaScript の基本</h3>
 
