--- a/practice-css/browser-intro.html
+++ b/practice-css/browser-intro.html
@@ -5,7 +5,6 @@
     <title>ウェブブラウザの紹介</title>
 	<link rel="stylesheet" href="browser-intro.css">
 </head>
-</head>
 
 <body>
 
@@ -24,10 +23,10 @@
 </ul>
 
 <div id="zentai">
-	<div class="box">Google Chrome<p class="target">Google Chrome（グーグル・クローム）は、Googleが開発したクロスプラットフォームのウェブブラウザである。2008年にMicrosoft Windows用に最初にリリースされ、その後Linux、macOS、iOS、Androidに移植された。</p></div>
-	<div class="box">Safari<p class="target">Safari（サファリ）は、Appleにより開発されているウェブブラウザ。レンダリングエンジンのWebKitを初めとするオープンソースソフトウェアをベースにしており、Mac標準搭載のウェブブラウザとして過去のInternet Explorer for MacやNetscape Navigatorを置き換える形で登場した。</p></div>
-	<div class="box">Microsoft Edge<p class="target">Microsoft Edge（マイクロソフト エッジ）は、マイクロソフトにより開発されているウェブブラウザである。マルチプラットフォームのソフトウェアとしてiOS、macOS、Android、Linux版も配布されている。</p></div>
-	<div class="box"><img src="firefox_icon.png">Mozilla Firefox<p class="target">Mozilla Firefox（モジラ・ファイアーフォックス）は、Mozilla Foundationおよびその傘下のMozilla Corporationによって開発されているフリーかつオープンソースのウェブブラウザである。</p></div>
+	<div class="box"><div class="special">Google Chrome</div><p class="target">Google Chrome（グーグル・クローム）は、Googleが開発したクロスプラットフォームのウェブブラウザである。2008年にMicrosoft Windows用に最初にリリースされ、その後Linux、macOS、iOS、Androidに移植された。</p></div>
+	<div class="box"><div class="special">Safari</div><p class="target">Safari（サファリ）は、Appleにより開発されているウェブブラウザ。レンダリングエンジンのWebKitを初めとするオープンソースソフトウェアをベースにしており、Mac標準搭載のウェブブラウザとして過去のInternet Explorer for MacやNetscape Navigatorを置き換える形で登場した。</p></div>
+	<div class="box"><div class="special">Microsoft Edge</div><p class="target">Microsoft Edge（マイクロソフト エッジ）は、マイクロソフトにより開発されているウェブブラウザである。マルチプラットフォームのソフトウェアとしてiOS、macOS、Android、Linux版も配布されている。</p></div>
+	<div class="box"><img class="sign"src="firefox_icon.png"><div class="special">Mozilla Firefox</div><p class="target">Mozilla Firefox（モジラ・ファイアーフォックス）は、Mozilla Foundationおよびその傘下のMozilla Corporationによって開発されているフリーかつオープンソースのウェブブラウザである。</p></div>
 </div>
 
 </body>
