--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </ul>
 
         <h3>第3回 JavaScript の基本</h3>
-
+        <p>今回は次の「JavaScriptの基本」について学びました。また次の課題に取り組みました。JavaScriptとはJavaと似ていますが、変数宣言や比較、型変換、関数など少々異なった部分があります。さらにJavaScriptではmainメソッドはありせんが一行目からプロブラムを始めることができます。また、デバックについても今回は学びました。</p>
+        <ul><a href="practice-js/obj-practice.html"target="_blank">練習3-6:オブジェクトの参照</a></ul>
         <h3>第4回 DOM と JavaScript </h3>
 
         <h3>第5回 イベント処理</h3>
