--- a/project.html
+++ b/project.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>NHK月曜の番組予定</title>
+        <title>今日の世界の天気</title>
+        <script src="weather.js" defer></script>
+        <link rel="stylesheet" href="project.css">
     </head>
     <body>
-        <h1>月曜日の注目番組</h1>
-        <h2>8:00（番組開始時刻）</h2>
-        <dl>
-            <dt>月曜ワイドショー（番組名）〜（番組サブタイトル）〜</dt>
-            <dd>（番組説明文）<br>（出演者）</dd>
-        </dl>
+        <h1>今日の世界の天気</h1>
+        <h2>都市名を入力</h2>
+        <p>天気：（晴れ、曇り、雨）（画像）</p>
+        <p>最高気温：</p>
+        <p>最低気温：</p>
     </body>
 </html>
