--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
         <h1>今日の世界の天気</h1>
         <h2>都市名を入力</h2>
         <p>天気：（晴れ、曇り、雨）（画像）</p>
-        <p>最高気温：</p>
-        <p>最低気温：</p>
+        <p>最高気温：◯度</p>
+        <p>最低気温：◯度</p>
     </body>
 </html>
