数当てゲームレポート課題

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       <h2>プロジェクト課題について</h2>
 
       <h2>数当てゲーム</h2>
+      <h3>課題3-3</h3>
+      <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が声たより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
+      <h3>課題4-1</h3>
+      <p>数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
 
       <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
@@ -31,10 +35,15 @@
         </ul>
 
         <h3>第3回 JavaScript の基本</h3>
-        <p>今回は次の「JavaScriptの基本」について学びました。また次の課題に取り組みました。JavaScriptとはJavaと似ていますが、変数宣言や比較、型変換、関数など少々異なった部分があります。さらにJavaScriptではmainメソッドはありせんが一行目からプロブラムを始めることができます。また、デバックについても今回は学びました。</p>
-        <ul><a href="practice-js/obj-practice.html"target="_blank">練習3-6:オブジェクトの参照</a></ul>
+        <p>今回は次の「JavaScriptの基本」について学びました。また次の課題に取り組みました。JavaScriptとはJavaと似ていますが、変数宣言や比較、型変換、関数など少々異なった部分があります。さらにJavaScriptではmainメソッドはありせんが一行目からプロブラムを始めることができます。また、デバックについても今回は学びました。<br>演習の成果</p>
+        <ul>
+          <li><a href="practice-js/obj-practice.html"target="_blank">練習3-6:オブジェクトの参照</a></li>
+        </ul>
         <h3>第4回 DOM と JavaScript </h3>
-
+        <p>今回は次の「DOM と JavaScript」について学びました。また、次の課題に取り組みました。DOMと前回学んだJavaScriptを組み合わせることによりWebページに動きを付け加えることができる。例えば、テキストの内容を追加や変更をできたりCSSプロパティを変更することもできる。このほかにもさまざまなことができるそうだ。<br>演習の成果</p>
+        <ul>
+          <li><a href="practice-js/debug-practice.html"target="_blank">練習4-2,4-3,4-4,4-5:DOMプロブラミング</a></li>
+        </ul>
         <h3>第5回 イベント処理</h3>
   </body>
 </html>
