--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <h2>本テーマの学習目的</h2>
 
       <h2>プロジェクト課題について</h2>
+      <ul>
+        <li><a href="project.html"target="_blank"></a>プロジェクト課題</li>
+      </ul>
+      
 
       <h2>数当てゲーム</h2>
       <h3>課題3-3</h3>
