--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <h2>数当てゲーム</h2>
       <h3>課題3-3</h3>
-      <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が声たより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
+      <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が答えより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
       <h3>課題4-1</h3>
       <p>数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
 
@@ -35,7 +35,7 @@
         <h3>第2回 CCS による Web ページの装飾</h3>
         <p>今回は次の「CSSによるWebページの装飾」について学びました。また次の課題に取り組みました。サイトの見栄えを決めるCSSは文字の色や背景色を好きな色に変更できるほか、書体や文字の大きさまで自由にサイトを編集することができる。またボックスを挿入してグループ分けすることもできる。<br>演習の成果</p>
         <ul>
-          <li><a href="practice-html/browser-intro.html"target="_blank">演習2-3:ウェブブラウザ説明ページの装飾</a></li>
+          <li><a href="practice-css/browser-intro.html"target="_blank">演習2-3:ウェブブラウザ説明ページの装飾</a></li>
         </ul>
 
         <h3>第3回 JavaScript の基本</h3>
