--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           異なり改行や空白は要素で表し、要素で使われる記号は全く違く特殊な文を使用する。<br>演習の成果
         </p>
         <ul>
-          <li><a href="practice-html/stucture.html"target="_blank">演習1-3:HTML文書の作成</a></li>
+          <li><a href="practice-html/structure.html"target="_blank">演習1-3:HTML文書の作成</a></li>
           <li><a href="practice-html/elements.html"target="_blank">演習1-4:HTMLのさまざまな要素</a></li>
         </ul>
 
