--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       
 
       <h2>数当てゲーム</h2>
+      <ul>
+        <li><a href="kazuate.html"target="_blank">数当てゲーム</a></li>
+      </ul>
       <h3>課題3-3</h3>
       <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が答えより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
       <h3>課題4-1</h3>
