--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <h2>プロジェクト課題について</h2>
       <ul>
-        <li><a href="medialabo/project.html"target="_blank">プロジェクト課題</a></li>
+        <li><a href="project.html"target="_blank">プロジェクト課題</a></li>
       </ul>
       
 
