インデックス

--- a/index.html
+++ b/index.html
@@ -52,5 +52,10 @@
           <li><a href="practice-dom/dom-exercise.html"target="_blank">練習4-2,4-3,4-4,4-5:DOMプロブラミング</a></li>
         </ul>
         <h3>第5回 イベント処理</h3>
+        <p>今回は次の「イベント処理」について学びました。また、次の課題に取り組みました。イベントというのはWebページ上で起こった動作や出来事のことです。例えば、ボタンを押すと画面の色が切り替わったり文字を入力し送信することでコンソール上で入力した文字を表示させたりすることもできます。<br>演習の成果</p>
+        <ul>
+          <li><a href="practice-event/event-intro.html"target="_blank">練習5-2:イベントハンドラの登録を確認する</a></li>
+          <li><a href="practice-event/event-list.html"target="_blank">練習5-3:イベントを選択する</a></li>
+        </ul>
   </body>
 </html>
