入力フォーム

--- a/project.html
+++ b/project.html
@@ -7,7 +7,11 @@
     </head>
     <body>
         <h1>今日の世界の天気</h1>
-        <h2>都市名を入力</h2>
+
+        <label for="tosi">都市名: </label>
+	    <input type="text" name="tosi" size="20">
+	    <button id="kensaku">検索</button>
+
         <p>天気：（晴れ、曇り、雨）（画像）</p>
         <p>最高気温：◯度</p>
         <p>最低気温：◯度</p>
