--- a/project.html
+++ b/project.html
@@ -12,8 +12,8 @@
 	    <input type="text" name="tosi" size="20">
 	    <button id="kensaku">検索</button>
 
-        <p>天気：（晴れ、曇り、雨）（画像）</p>
-        <p>最高気温：◯度</p>
-        <p>最低気温：◯度</p>
+        <p>天気：<span id="tenki">晴れ</span></p>
+        <p>最高気温： <span id="saikoukion">1</span>度</p>
+        <p>最低気温： <span id="saiteikion">1</span>度</p>
     </body>
 </html>
