--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <h3>課題3-3</h3>
       <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が答えより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
       <h3>課題4-1</h3>
-      <p>数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
+      <p>今回の課題は数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
+      <h3>課題5-1</h3>
+      <p>今回の課題は数当てゲームの完成です。行ったこととしては自分で遊べるように数を入力するイベントを作成しました。そこで入力した数を</p>
 
       <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
