--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>「Webコンテンツ作成の成果」</h1>
       <h2>本テーマの学習目的</h2>
+      <p>前期メディア実験の学習目的としてWebページで使われている元となるhtmlやページをデザインするcss、ページにさまざまな動きや変化を加えるJavaScript、ユーザーがクリックなど何かすることでページを変化させるイベント処理などを理解し、自らそのような動きのあるページを作れるようにするため
+      </p>
 
       <h2>プロジェクト課題について</h2>
       <ul>
@@ -24,7 +26,7 @@
       <h3>課題4-1</h3>
       <p>今回の課題は数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
       <h3>課題5-1</h3>
-      <p>今回の課題は数当てゲームの完成です。行ったこととしては自分で遊べるように数を入力するイベントを作成しました。そこで入力した数を</p>
+      <p>今回の課題は数当てゲームの完成です。行ったこととしては自分で遊べるように数を入力するイベントを作成しました。今回は予想する数を入力する場所を作り、ボタンを押すと予想した数と一致しているか判定させ予想より大きいか小さいかヒントを出すように前回作った部分を編集しました。</p>
 
       <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
@@ -59,5 +61,20 @@
           <li><a href="practice-event/event-intro.html"target="_blank">練習5-2:イベントハンドラの登録を確認する</a></li>
           <li><a href="practice-event/event-list.html"target="_blank">練習5-3:イベントを選択する</a></li>
         </ul>
+        <h2>感想</h2>
+        <p>今回Webコンテンツ作成の授業を受講してみて今まで私たちが見ていたWebページを作成することがここまで大変だと感心した。
+          苦戦した点として第4回の講義のWeb上の文字を変更や削除が可能であったりCSSの変更もできるDOMプログラミングが理解するのに最も時間がかかり難解だった。
+          始めはなぜわざわざDOMを使用しているのか直接書き換えれば簡単で楽なのだろうと感じでいたが、第5回のイベント処理や第6回のサーバーと通信したのちに受信したデータを表示するためにはDOMが必要であったのに気づいた。
+          なのでしっかりとDOMは理解するように努力する。
+          プロジェクト課題での強調点は通信を開始する処理でユーザーが選択肢の都市名を入力し検索した際にJavaScriptで『mydata』にある都市名と比較し同一のものがあったら、その都市名の都市IDをURLにつけてサーバーに通信する。
+          そこでその都市の気象情報のデータを受信することでユーザーが検索した都市の気象情報をコンソールに表示し、Web上には必要な情報（ここでは天気、最高気温、最低気温、湿度）を表示する。
+          この部分は自分で考えたものであって、このプログラミングを書いて何度も実行や修正をしたのち最終的に成功したときはこの授業を受けていて自分で書けたことで最も成長を感じた瞬間でした。
+          さらにプロジェクト課題での工夫点はCSSによるWebページの装飾で私は色彩計画という授業で配色のイメージを学んでいるので、それを活かしてWebページ上では爽やかなイメージにするためにフレッシュナチュラルというグリーンを主軸にした色と明度や彩度は薄めの色を選択した。
+          しかしながらその色だけを使用すると世界の天気という情報を提供する場においてあまりにも明度が薄いので見にくくなってしまったので、データの情報以外は黒で質素にし全てを黒にしてしまうと欲しい情報がパッと見るとわかりにくくなってしまうと感じ、データの情報は水色でわかりやすいようにした。
+          私はこの部分を経てもっとCCSについて学べばインターネット上にあるたくさんのWebページように綺麗で見やすいものを作れると感じもっと学びたいと思った。
+          数当てゲームでは始めはまだ授業で習っていないことも多かったためどのように動くか想像ができなかったがDOMやイベント処理を学んでいくうちに形になり最後には完成できたのですごくスッキリした。
+          CSSを加えたり、正解した時にページが変化するようにするなどさまざまなアイデアが広がった。
+          よって、私はこの授業を通してWebページを作る際の基礎的な部分は学べたがあくまで基礎であって、まだまだ知らないDOMやCSSの機能を学んで他人が見てもおかしくなく見やすいWebページを作ってみたいと思った。
+        </p>
   </body>
 </html>
