--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       </p>
 
       <h2>プロジェクト課題について</h2>
+      <p>私のプロジェクト課題は世界の天気予報を表示するものだ。検索欄の下にある12の都市名から選択し、検索欄で検索することでその都市の天気、最高気温、最低気温、湿度を知ることができる。このシステムの説明として都市名でjavascript内に12の都市名に対応させてある都市IDのデータを作り、for文で12回入力都市名と先ほど書いた都市名のデータと同じになるまで繰り返し一致したらその都市名に対応する都市IDをURLにつけその年の気象データを持ってくる。</p>
       <ul>
         <li><a href="project.html"target="_blank">プロジェクト課題</a></li>
       </ul>
@@ -19,15 +20,10 @@
 
       <h2>数当てゲーム</h2>
       <ul>
-        <li><a href="kazuate.html"target="_blank">数当てゲーム</a></li>
+        
       </ul>
-      <h3>課題3-3</h3>
-      <p>今回の課題は数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が答えより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。</p>
-      <h3>課題4-1</h3>
-      <p>今回の課題は数当てゲームの結果をコンソールではなくページに表示するように前回の課題を修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。</p>
-      <h3>課題5-1</h3>
-      <p>今回の課題は数当てゲームの完成です。行ったこととしては自分で遊べるように数を入力するイベントを作成しました。今回は予想する数を入力する場所を作り、ボタンを押すと予想した数と一致しているか判定させ予想より大きいか小さいかヒントを出すように前回作った部分を編集しました。</p>
-
+      <p>最後に自分で遊べるように数を入力するイベントを作成する。今回は予想する数を入力する場所を作り、ボタンを押すと予想した数と一致しているか判定させ予想より大きいか小さいかヒントを出すように前回作った部分を編集しました。>数当てゲームの作成説明として、まず数当てゲームのテンプレートをコピペしたのちコンソールにn回目の予想を書いてそれを正誤判定し、3回目でも間違えた場合は最後に答えを出力するようにする。また、1,2回目で間違えている場合は予想した数が答えより大きいか小さいかどうかのヒントも加える。さらに4回目以降で予想したとしても「すでにゲームは終わっています。」という文を出力するようにする。最後に自分で遊べるように数を入力するイベントを作成する。今回は予想する数を入力する場所を作り、ボタンを押すと予想した数と一致しているか判定させ予想より大きいか小さいかヒントを出すように前回作った部分を編集しました。>次に数当てゲームの結果をコンソールではなくページに表示するように修正して行います。例えば、予想のメッセージのn回目や予想の数字にjavascript上で要素を付け加え、コンソールからHTML上に表示するように書き換える。同じように判定の部分もHTML上に表示できるように書き換える。最後に自分で遊べるように数を入力するイベントを作成する。今回は予想する数を入力する場所を作り、ボタンを押すと予想した数と一致しているか判定させ予想より大きいか小さいかヒントを出すように前回作った部分を編集しました。</p>
+      <li><a href="kazuate.html"target="_blank">数当てゲーム</a></li>
       <h2>毎回の実験で作成したページ</h2>
         <h3>第1回 WWW と HTML</h3>
         <p>今回は次の「WWWとHTML」について学びました。また次の課題に取り組みました。サイトの基盤であるHTML要素や要素に付加情報を付けるために属性を追加した。またHTML内では普段の文章とは
